[ACPI] acpi_video_device_write_state() now works

http://bugzilla.kernel.org/show_bug.cgi?id=5060

Signed-off-by: Luming Yu <luming.yu@intel.com>
Signed-off-by: Len Brown <len.brown@intel.com>